@@ -1,3 +1,9 @@
+2009-06-24  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix wrong assertions.
+	* src/roboptim-core-cfsqp-plugin.cc: Fix broken assertions
+	in constraint evaluation (value and gradient).
+
 2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Remove Libtool warning.
